--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
-<title>HTML Tutorial</title>
+<title>Varsha's Portfolio</title>
 <body>
 
-<h1>Varsha's Portfolio</h1>
-<p>Happy New Year</p>
+<h1>Helloo</h1>
+<p>I'm a student studying in PES University,B.Design.</p>
+<h2>Projects</h2>
+<a href="project1.html"> Project1 </a>
 
 </body>
 </html>
