--- a/project1.html
+++ b/project1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <title>Project 1</title>
-<body>
-<h1 style="background-color:MistyRose"> Project 1</h1>
+<body style="background-color:Lavender;">
+<h1 style="background-color:MistyRose;font-family:verdana;"> Project 1</h1>
 <img src="images.jpg">
 </body>
