--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <title>Varsha's Portfolio</title>
-<body>
+<body style="background-color:Lavender;">
 
-<h1>Helloo</h1>
-<p>I'm a student studying in PES University,B.Design.</p>
-<h2>Projects</h2>
-<a href="project1.html"> Project1 </a>
+<h1 style="color:LightCoral;font-family:verdana;"><center>Portfolio</h1>
+<p style="background-color:LightCoral;font-family:Trebuchet MS;font-size:150%">Hey! My name is Varsha and I'm a student studying in PES University,B.Design.</p>
+<h1 style="color:LightCoral;font-family:verdana;">Projects</h1>
+<a href="project1.html"style="background-color:LightCoral;font-family:Trebuchet MS;font-size:150%"> Project1 </a>
 
 </body>
 </html>
